--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <section class="bg-blue-500 w-9/12 mx-auto mt-12 p-8">
             <h3 class="text-4xl mb-4 font-medium">Please Login</h3>
             <div>
-                <input class="w-9/12 block mb-4 px-4 rounded-lg" type="email" name="" id="" placeholder="Enter Your email">
-                <input class="w-9/12 block mb-4 px-4 rounded-lg" type="password" name="" id="" placeholder="Enter Your Password">
-                <button class="bg-amber-500 px-8 py-2 text-white font-medium rounded-xl hover:bg-sky-400" type="submit">Submit</button>
+                <input id="user-email" class="w-9/12 block mb-4 px-4 rounded-lg" type="email" name="" id="" placeholder="Enter Your email">
+                <input id="user-pass" class="w-9/12 block mb-4 px-4 rounded-lg" type="password" name="" id="" placeholder="Enter Your Password">
+                <button id="btn-submit" class="bg-amber-500 px-8 py-2 text-white font-medium rounded-xl hover:bg-sky-400" type="submit">Submit</button>
             </div>
         </section>
     </main>
