--- a/bank.html
+++ b/bank.html
@@ -11,8 +11,37 @@
         <h1 class="text-5xl text-center mt-4">Let's Welcome To Bank Inside, Get <span class="font-semibold text-violet-600">Moooooneeey Now!!</span></h1>
     </header>
     <main>
-        <section class="bg-blue-500 w-9/12 mx-auto mt-12 p-8">
-            
+        <!-- Balance Status section  -->
+        <section class="mt-12">
+            <div class="grid grid-cols-3 gap-4 w-6/12 mx-auto text-white">
+                <div class="p-8 bg-green-500 rounded-xl">
+                    <h4 class="text-2xl">Deposit</h4>
+                    <h4 class="text-5xl">$<span>00</span></h4>
+                </div>
+                <div class="p-8 bg-orange-400 rounded-xl">
+                    <h4 class="text-2xl">Withdraw</h4>
+                    <h4 class="text-5xl">$<span>00</span></h4>
+                </div>
+                <div class="p-8 bg-violet-500 rounded-xl">
+                    <h4 class="text-2xl">Balance</h4>
+                    <h4 class="text-5xl">$<span>1000</span></h4>
+                </div>
+            </div>
+        </section>
+        <!-- Deposit and withdraw section  -->
+        <section class="mt-12">
+            <div class="grid grid-cols-2 gap-4 w-6/12 mx-auto text-white">
+                <div class="p-8 bg-sky-600 rounded-xl">
+                    <h4 class="text-2xl mb-4">$ Deposit Amount</h4>
+                    <input class="w-9/12 block mb-3 px-3" type="number" name="" id="" placeholder="Enter Your Amount" min="500" style="color: black;">
+                    <button id="btn-deposit" class="bg-green-600 hover:bg-sky-500 px-8 py-2 text-white font-medium rounded-lg" type="submit">Submit</button>
+                </div>
+                <div class="p-8 bg-cyan-500 rounded-xl">
+                    <h4 class="text-2xl mb-4">$ Withdraw Amount</h4>
+                    <input class="w-9/12 block mb-3 px-3" type="number" name="" id="" placeholder="Enter Your Amount" min="500" style="color: black;">
+                    <button id="btn-deposit" class="bg-orange-600 hover:bg-sky-500 px-8 py-2 text-white font-medium rounded-lg" type="submit">Submit</button>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
