--- a/bank.html
+++ b/bank.html
@@ -13,10 +13,10 @@
     <main>
         <!-- Balance Status section  -->
         <section class="mt-12">
-            <div class="grid grid-cols-3 gap-4 w-6/12 mx-auto text-white">
+            <div class="grid grid-cols-3 gap-4 w-7/12 mx-auto text-white">
                 <div class="p-8 bg-green-500 rounded-xl">
                     <h4 class="text-2xl">Deposit</h4>
-                    <h4 class="text-5xl">$<span>00</span></h4>
+                    <h4 class="text-5xl">$<span id="depositTotal">00</span></h4>
                 </div>
                 <div class="p-8 bg-orange-400 rounded-xl">
                     <h4 class="text-2xl">Withdraw</h4>
@@ -33,13 +33,13 @@
             <div class="grid grid-cols-2 gap-4 w-6/12 mx-auto text-white">
                 <div class="p-8 bg-sky-600 rounded-xl">
                     <h4 class="text-2xl mb-4">$ Deposit Amount</h4>
-                    <input class="w-9/12 block mb-3 px-3" type="number" name="" id="" placeholder="Enter Your Amount" min="500" style="color: black;">
-                    <button id="btn-deposit" class="bg-green-600 hover:bg-sky-500 px-8 py-2 text-white font-medium rounded-lg" type="submit">Submit</button>
+                    <input id="deposit-field" class="w-9/12 block mb-3 px-3" type="number" name="" id="" placeholder="Enter Your Amount" min="500" style="color: black;">
+                    <button id="btn-deposit" class="bg-green-600 hover:bg-sky-500 px-8 py-2 text-white font-medium rounded-lg" type="submit">Deposit</button>
                 </div>
                 <div class="p-8 bg-cyan-500 rounded-xl">
                     <h4 class="text-2xl mb-4">$ Withdraw Amount</h4>
                     <input class="w-9/12 block mb-3 px-3" type="number" name="" id="" placeholder="Enter Your Amount" min="500" style="color: black;">
-                    <button id="btn-deposit" class="bg-orange-600 hover:bg-sky-500 px-8 py-2 text-white font-medium rounded-lg" type="submit">Submit</button>
+                    <button id="btn-withdraw" class="bg-orange-600 hover:bg-sky-500 px-8 py-2 text-white font-medium rounded-lg" type="submit">Withdraw</button>
                 </div>
             </div>
         </section>
@@ -47,6 +47,6 @@
     <footer>
 
     </footer>
-    <script src=""></script>
+    <script src="js/deposit.js"></script>
 </body>
 </html>
