--- a/bank.html
+++ b/bank.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="p-8 bg-violet-500 rounded-xl">
                     <h4 class="text-2xl">Balance</h4>
-                    <h4 class="text-5xl">$<span>1000</span></h4>
+                    <h4 class="text-5xl">$<span id="totalBalance">1000</span></h4>
                 </div>
             </div>
         </section>
