--- a/bank.html
+++ b/bank.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="p-8 bg-cyan-500 rounded-xl">
                     <h4 class="text-2xl mb-4">$ Withdraw Amount</h4>
-                    <input class="w-9/12 block mb-3 px-3" type="number" name="" id="" placeholder="Enter Your Amount" min="500" style="color: black;">
+                    <input id="withdraw-field" class="w-9/12 block mb-3 px-3" type="number" name="" id="" placeholder="Enter Your Amount" min="500" style="color: black;">
                     <button id="btn-withdraw" class="bg-orange-600 hover:bg-sky-500 px-8 py-2 text-white font-medium rounded-lg" type="submit">Withdraw</button>
                 </div>
             </div>
