--- a/bank.html
+++ b/bank.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="p-8 bg-orange-400 rounded-xl">
                     <h4 class="text-2xl">Withdraw</h4>
-                    <h4 class="text-5xl">$<span>00</span></h4>
+                    <h4 class="text-5xl">$<span id="withdrawTotal">00</span></h4>
                 </div>
                 <div class="p-8 bg-violet-500 rounded-xl">
                     <h4 class="text-2xl">Balance</h4>
